--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   
     <header>
 
-        <h1>
+        <h1 class="box">
             Thank You Frau Sussane Wettemeier
         </h1>
         <p>
